osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_experiments/test_experiment_revision_error.txt
error: experiment revision must be zero or greater
--> main.sml:5:14
     |
   5 |     revision=-1, local_bucketing=True
     |               ^
